--- a/app/src/main/res/layout/item_cart_seller.xml
+++ b/app/src/main/res/layout/item_cart_seller.xml
@@ -1,11 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
+    android:padding="10dp"
+    android:gravity="center_vertical"
     android:layout_height="match_parent">
+
+    <ImageView
+        android:id="@+id/img_select"
+        android:src="@drawable/ic_checked"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content" />
 
     <TextView
         android:id="@+id/txt_seller_name"
         android:textSize="16sp"
+        android:layout_marginLeft="10dp"
         android:textColor="@android:color/black"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content" />
