--- a/app/src/main/res/layout/item_cart_product.xml
+++ b/app/src/main/res/layout/item_cart_product.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:paddingLeft="16dp"
+    android:paddingRight="16dp"
     android:layout_height="match_parent">
 
     <RelativeLayout
@@ -69,6 +70,14 @@
             android:layout_below="@+id/txt_product_name"
             android:layout_toRightOf="@+id/img_product"
             android:textSize="14sp" />
+
+        <com.liqy.jdapp.cart.view.AddSumView
+            android:id="@+id/add_sum"
+            android:layout_alignParentRight="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginBottom="8dp"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"/>
 
 
     </RelativeLayout>
