--- a/app/src/main/res/layout/activity_info.xml
+++ b/app/src/main/res/layout/activity_info.xml
@@ -1,9 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".mocktest.InfoActivity">
 
-</android.support.constraint.ConstraintLayout>
+    <!--轮播图-->
+
+    <TextView
+        android:id="@+id/txt_p_name"
+        android:layout_width="match_parent"
+        android:text="商品名称"
+        android:layout_height="wrap_content" />
+
+    <com.youth.banner.Banner
+        android:layout_below="@id/txt_p_name"
+        android:id="@+id/banner"
+        android:layout_width="match_parent"
+        android:layout_height="150dp" />
+
+    <RelativeLayout
+        android:id="@+id/add_cart_layout"
+        android:layout_width="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_height="wrap_content">
+
+        <Button
+            android:id="@+id/btn_add_cart"
+            android:layout_alignParentRight="true"
+            android:text="加入购物车"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content" />
+
+    </RelativeLayout>
+
+</RelativeLayout>
